<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="poly.pom.exchangerateapp.view.ExchangeFargment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Spinner
                android:id="@+id/spCountry1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <poly.pom.exchangerateapp.custom_widget.TextFitTextView
                android:id="@+id/edMoney1"
                style="@style/MoneyInputStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="0"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spCountry2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <poly.pom.exchangerateapp.custom_widget.TextFitTextView
                android:id="@+id/edMoney2"
                style="@style/MoneyInputStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="0"
                android:textSize="36sp" />
        </LinearLayout>


    </LinearLayout>

    <include
        layout="@layout/calculator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

</LinearLayout>
